Switch to ArrayList-based stack implementation
ArrayList is more memory efficient, and push/pops should be at least as
performant since they are done at the end of the ArrayList.